Arregle urls de img. Cree las rutas con express.Quedaria agregar las maquetas de los html restantes

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tamaiti</title>
     <script src="https://kit.fontawesome.com/yourcode.js"></script>
-    <link rel="stylesheet" href="../../public/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
@@ -13,7 +13,7 @@
 <body >
 
 <header>
-    <a href="#"><img class='logo' src="../../public/img/tamaiti_logo.png" alt=""></a>
+    <a href="#"><img class='logo' src="./img/tamaiti_logo.png" alt=""></a>
         <nav>
             <ul>
                 <li><a href="">Mi carrito <i class="fa fas fa-cart-plus"></i></a></li>
@@ -27,11 +27,11 @@
         <h2>Ideas para Jugar</h2>
         <p>Lorem ipsum dolor sit amet.</p>
         <button><a href="">Tienda ONLINE</a></button></div>
-    <img  src="../../public/img/tamaiti_banner_home.png" alt="">
+    <img  src="./img/tamaiti_banner_home.png" alt="">
 </section>
 
 <section class="buscarEdad">
-    <h2>Buscar por edad</h2>
+    <h2>¿Para qué edad buscás?</h2>
     <ul class="navFilterEdad">
         <li><a href="">1 a 3 años</a></li>
         <li><a href="">3 a 6 años</a></li>
@@ -40,44 +40,51 @@
     </ul>
 </section>
 
-<section class="pructosOportunidades">
-    <h2>Oportunidades para jugar</h2>
+<section class="oportunidades">
+    <h2>Oportunidades</br><span>para jugar</span> </h2>
+<div class="productList">
 
     <article class="productCard">
-        <img src="" alt="">
+        <img src="./img/tamaiti_product_01.png" alt="">
+        <div class="text">
         <h3 class="title">Memotest Espacial</h3>
-        <h5 class="edad">6 a 9 años</h5>
+        <h5 class="edad">Edad 6 a 9 años</h5>
         <h4 class="precio">$799,-</h4>
         <h6 class="formaPago"><strong>12 cuotas</strong> sin interés</h6>
+        </div>
     </article>
 
+   
     <article class="productCard">
-        <img src="" alt="">
-        <h3 class="title">Domino de Mar</h3>
-        <h5 class="edad">3 a 6 años</h5>
-        <h4 class="precio">$700,-</h4>
-        <h6 class="formaPago"><strong>18 cuotas</strong> sin interés</h6>
-
+        <img src="./img/tamaiti_product_01.png" alt="">
+        <div class="text">
+        <h3 class="title">Memotest Colores</h3>
+        <h5 class="edad">Edad 1 a 3 años</h5>
+        <h4 class="precio">$740,-</h4>
+        <h6 class="formaPago"><strong>12 cuotas</strong> sin interés</h6>
+        </div>
     </article>
-
+    
     <article class="productCard">
-        <img src="" alt="">
-        <h3 class="title">Domino de Dinosaurios</h3>
-        <h5 class="edad">3 a 6 años</h5>
-        <h4 class="precio">$700,-</h4>
-        <h6 class="formaPago"><strong>18 cuotas</strong> sin interés</h6>
+        <img src="./img/tamaiti_product_01.png" alt="">
+        <div class="text">
+        <h3 class="title">Memotest Espacial</h3>
+        <h5 class="edad">Edad 6 a 9 años</h5>
+        <h4 class="precio">$799,-</h4>
+        <h6 class="formaPago"><strong>12 cuotas</strong> sin interés</h6>
+        </div>
     </article>
-
-
+    
     <article class="productCard">
-        <img src="" alt="">
-        <h3 class="title">Domino de Transporte</h3>
-        <h5 class="edad">3 a 6 años</h5>
+        <img src="./img/tamaiti_product_01.png" alt="">
+        <div class="text">
+        <h3 class="title">Memotest Dinosaurios</h3>
+        <h5 class="edad">Edad 2 a 9 años</h5>
         <h4 class="precio">$700,-</h4>
-        <h6 class="formaPago"><strong>18 cuotas</strong> sin interés</h6>
-
+        <h6 class="formaPago"><strong>12 cuotas</strong> sin interés</h6>
+        </div>
     </article>
-
+</div>
 </section>
 
 
