--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,6 +38,12 @@ h1, h2, h3, h4, h5, h5, h6 {
     color: var(--colorPrincipal);
 }
 
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+
 form {
     text-align: center;
 }
@@ -85,14 +91,15 @@ header nav ul li a {
 section.bannerTienda{
     background-color: #9fd3d1;
     display: flex;
+    justify-content: space-evenly;
+    align-items: flex-center;
     color: #fff;
-    padding: 20px 0px;
+    padding: 20px 20px;
     background-image: url("../img/tamaiti_banner_home_bk.png");
 }
 
 section.bannerTienda .text {
-        width: 60%;
-        padding: 80px;
+    padding: 80px;
     }
 section.bannerTienda .text h2 {
         font-size: 50px;
@@ -117,12 +124,129 @@ section.bannerTienda .text a {
         text-transform: uppercase;
     }
 section.bannerTienda img {
-        width: 30%;
-        position: relative;
+max-width:500px;
+}
+
+
+ /* ================================
+- seccion Buscar por Edad
+================================*/
+
+section.buscarEdad{
+    padding: 60px 0px;
+    background-image: url("../img/tamaiti_bk.png");
+}
+
+section.buscarEdad h2 {
+    color: rgb(135 130 123 / 66%);
+    font-size:30px ;
+    font-weight: 600;
+
+ 
+}
+section.buscarEdad ul {
+    display: flex;
+    width: 60%;
+    text-decoration: none;
+justify-content: space-around;
+align-items: center;
+flex-wrap: wrap;
+margin: 30px auto;
+    }
+section.buscarEdad ul li {
     }
 
-
+section.buscarEdad ul li a{
+    display: block;
+    height: 60px;
+    background: #3737370d;
+    border-radius: var(--buttonRadius);
+    padding: var(--buttonPadding);
+    text-decoration: none;
+    color: var(--colorPrincipal);
+    font-weight: 600;
+    padding: 20px 60px;
+    text-transform: uppercase;
+    border: solid 1px #37373721;
+     }
     
+
+
+
+ /* ================================
+- seccion Oportunidades
+================================*/
+
+section.oportunidades{
+    padding: 60px 0px;
+    background-color: #f2f0e4;
+    background-image: url("../img/tamaiti_footer_bk.png");
+    background-repeat: no-repeat;
+    background-position: right bottom;
+}
+
+section.oportunidades h2 {
+    font-size:35px ;
+    font-weight: 600;
+    line-height: 30px;
+ }
+ 
+ section.oportunidades h2 span {
+font-family: 'Grandstander';   
+font-size:25px ;
+color: var(--colorSecundario);
+font-weight: 600;
+ }
+
+section.oportunidades .productList{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+}
+
+article.productCard {
+    background-color: #fff;
+    border-radius: 10px;
+    display: flex;
+    width: 30%;
+    box-shadow: 0px 0px 6px #88888859;
+    padding: 15px;
+    min-width: 350px;
+    margin-top:15px;
+
+}
+article.productCard img {
+    width: 45%;
+
+}
+article.productCard .text  {
+    display:flex;
+    width: 55%;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+article.productCard .text h3 {
+    color:#231f20;
+    
+}
+article.productCard .text h5.edad {
+    color:#231f207a;
+    text-transform: uppercase;
+}
+article.productCard .text  h4.precio {
+    color:#231f20;
+    font-weight: bold;
+    font-size: 25px;
+    align-self: flex-end ;
+
+}
+article.productCard .text h6.formaPago {
+    color:#231f2048;
+    font-size: 16px;
+}
 
 /* ============
 - FOOTER
@@ -134,7 +258,6 @@ footer {
     align-items: center;
     padding: 30px 100px;
     background-color: var(--colorPrincipal);
-
 }
 
 
@@ -159,4 +282,17 @@ footer ul.navNosotros li a {
 }
 
 
+
+@media(max-width:375px){
+
+section.bannerTienda{
+    flex-direction: column;
+
+    }
+
+ article.productCard {
+        min-width: 90%;
+    }    
+
+}
 
