reubique productDatail.html en views. Arregle las rutas para que llamen los html maquetados

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -13,7 +13,7 @@
 <body >
 
 <header>
-    <a href="#"><img class='logo' src="./img/tamaiti_logo.png" alt=""></a>
+    <a href="index.html"><img class='logo' src="./img/tamaiti_logo.png" alt=""></a>
         <nav>
             <ul>
                 <li><a href="">Mi carrito <i class="fa fas fa-cart-plus"></i></a></li>
