HEADER css y media query

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,22 +1,18 @@
-<button href="#">menu</button>
-
 
 <nav class="menu">
-    <ul>
-        <li><a href="">Buscar <i class="fa fa-search fa-fw icon"></i></a></li>
-        <li><a href="">Mi carrito <i class="fa fas fa-cart-plus"></i></a></li>
-        <li><a href="">Ingresar <i class="fa fa-user fa-fw icon"></i></a></li>
+    <div class="top">
+    <a href="#" class="btn-menu"> <i class="fa fa-bars"></i></a>
+
+    <a href="#"><img class='logo' src="../../../images/tamaiti_logo.png" alt="logo"></a>
+    </div>
+
+    <ul class="enlaces">
+        <li><a href="#"><i class="fa fa-search "></i><span class="enlaceName">Buscar</span></a></li>
+        <li><a href="#"><i class="fa fa-user"></i><span class="enlaceName">Ingresar</span></a></li>
+        <li><a href="#"><i class="fa  fa-cart-plus"></i> <span class="enlaceName">Mi carrito </span></a></li>
     </ul>
+
 </nav>
 
-
-<a href="#"><img class='logo' src="../../../images/tamaiti_logo.png" alt="logo"></a>
-<nav>
-    <ul>
-        <li><a href="">Buscar <i class="fa fa-search fa-fw icon"></i></a></li>
-        <li><a href="">Mi carrito <i class="fa fas fa-cart-plus"></i></a></li>
-        <li><a href="">Ingresar <i class="fa fa-user fa-fw icon"></i></a></li>
-    </ul>
-</nav>
 
 
