--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,35 +54,74 @@ form {
 ============ */
 
 header {
+    width: 100%;
+    top:0;
+}
+
+header nav.menu {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 80px;
-    padding: 0 100px;
-
-}
-header .logo {
-    height: 50px;
-
+    padding: 0 10%;
+    background-color:#fff;
+    width: 100%;
 }
 
-header nav {}
-header nav ul {
+header nav.menu .top {
     display: flex;
     justify-content: space-between;
-    list-style-type: none;
+    align-items: center;
 }
-header nav ul li {
+
+header nav.menu img.logo {
+    height: 50px;
+    padding: 5px;
+    margin-left: 5px;
+}
+
+header nav.menu a.btn-menu {
+ border-radius: 30px;
+ color:#373737a8;
+ text-decoration: none;
+ font-size:1.3em;
+ padding:0.8em;
+ margin-right:5px;
+
+}
+
+header nav.menu ul {
+    display: flex;
+    justify-content: flex-end;
+    list-style-type: none;
+    align-items: center;
+    flex-grow: 1;
+}
+
+header nav.menu ul li {
     margin-left: 20px;
 }
-header nav ul li:first-child {
-    margin-left: 0
+header nav.menu ul li:first-child {
+    margin-left: 0;
 }
-header nav ul li a {
-    text-transform: uppercase;
+header nav.menu ul li a, a.btn-menu {
     color:#373737a8;
     text-decoration: none;
+    font-size:1em;
+    padding: 1.3em;
+
 }
+header nav.menu ul li a:hover, a:hover.btn-menu{
+    color:#4fb6a5;
+    background-color:#4fb6a510 ;
+    
+}
+
+header nav.menu i {
+    margin-right:8px ;
+    font-size:1.3em;
+}
+
+
 
 /* ================================
 - seccion HOME BANNER PRINCIPAL
@@ -123,7 +162,7 @@ section.bannerTienda .text a {
         font-weight: 600;
         text-transform: uppercase;
     }
-section.bannerTienda images {
+section.bannerTienda img {
 max-width:500px;
 }
 
@@ -148,10 +187,10 @@ section.buscarEdad ul {
     display: flex;
     width: 60%;
     text-decoration: none;
-justify-content: space-around;
-align-items: center;
-flex-wrap: wrap;
-margin: 30px auto;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 30px auto;
     }
 section.buscarEdad ul li {
     }
@@ -179,7 +218,7 @@ section.buscarEdad ul li a{
 
 section.oportunidades{
     padding: 60px 0px;
-    background-color: #f2f0e4;
+    background-color: #4fb6a510;
     background-image: url("../images/tamaiti_footer_bk.png");
     background-repeat: no-repeat;
     background-position: right bottom;
@@ -282,8 +321,68 @@ footer ul.navNosotros li a {
 }
 
 
+ /* ================================
+- Media Querys
+================================*/
+
+@media(max-width:768px){
+
+    header nav.menu {
+        display: flex;
+        justify-content: space-around;
+        list-style-type: none;
+        flex-wrap: wrap;
+        padding-top:5px;
+    }
+
+    header nav.menu .enlaceName {
+     display:none;
+      }
+    
+    header nav.menu ul li a, a.btn-menu {
+        font-size: 1.3em;
+        padding: 0.8em;
+        border-radius: 30em;
+    }    
+
+
+
+
 
 @media(max-width:375px){
+    header nav.menu  {
+        flex-direction: column;
+        padding:0 0%;
+        }
+
+    header nav.menu .top {
+        width: 100%;
+        display: flex;
+        justify-content:stretch ;
+        align-items: center;
+        padding:5px;
+
+    }
+
+
+header nav.menu ul {
+    width: 100%;
+    height: 80px;
+    justify-content: center;
+    background-color: #4fb6a510;
+   }
+
+header nav.menu .enlaces a {
+  border-radius: 50px;
+  padding:0.6em;
+   }
+       
+       
+header nav.menu img.logo {
+    height: 50px;
+    margin-left:20%;
+}
+    
 
 section.bannerTienda{
     flex-direction: column;
@@ -295,4 +394,6 @@ section.bannerTienda{
     }    
 
 }
+
+
 
