--- a/src/views/pages/details.ejs
+++ b/src/views/pages/details.ejs
@@ -7,40 +7,32 @@
 
     <h1>Carrito Compras</h1>
     <section class="categoria">Categorías/Puzzles</section>
-    <div class="producto">
-        <div class="image1">
-        <img src="../../../images/tamaiti_product_01.png" width="100%">
-        </div>
-        <div class="image2">
-            <img src="../../../images/tamaiti_product_02.png" width="100%" >
-                  </div>
-         <div class="image3">
-            <img src="../../../images/tamaiti_product_03.png" width="100%">
-         </div>     
-    </div>
-    <article class="productCard">
-        <img src="../../../images/tamaiti_product_01.png" alt="">
+    <div class="productCard">
+        <img src="../../../images/tamaiti_product_01.png"alt="">
         <div class="text">
         <h3 class="title">Memotest Espacial</h3>
         <h5 class="edad">Edad 6 a 9 años</h5>
         <h4 class="precio">$799,-</h4>
         <h6 class="formaPago"><strong>12 cuotas</strong> sin interés</h6>
-        </div>
-    </article>
-    <div class="productInfo" >
+        <button>
         <a href="" class="btn">Comprar</a>
+        </button>
+        </div>
+    </div>
+    <br>
+    <div class="productInfo" >
+       <h7>Características</h7>
+            <br>
+            <p>
+            <ul>-12 pares de fichas 7x7cm.</ul>
+            <ul>-Edad 6 a 9 años.</ul>
+            </p>            
         </div>
 
-    <br>    
-        <h7>Características</h7>
-                <br>
-                <p>
-                <ul>-12 pares de fichas 7x7cm.</ul>
-                <ul>-Edad 6 a 9 años.</ul>
-                </p>           
-   <div class= "relatedProducts">
+    <br>          
+   <section class= "relatedProducts">
     <h2 class="h2-relatedProductos">También te puede interesar</h2>
-   </div>  
+
    <article class="productCard">
     <img src="../../../images/tamaiti_product_01.png" alt="">
     <div class="text">
@@ -59,6 +51,16 @@
     <h6 class="formaPago"><strong>12 cuotas</strong> sin interés</h6>
     </div>
 </article>
+<article class="productCard">
+    <img src="../../../images/tamaiti_product_01.png" alt="">
+    <div class="text">
+    <h3 class="title">Domino de transportes</h3>
+    <h4 class="precio">$800</h4>
+    <h5 class="descuento">%10 off</h5>
+    <h6 class="formaPago"><strong>12 cuotas</strong> sin interés</h6>
+    </div>
+</article>
+</section>
 
     <footer>
         <%- include('../partials/footer'); %>
