luli trabajando sobre el css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -405,6 +405,25 @@ section.categoria{
     background-repeat: no-repeat;
     background-position: right bottom;
 }
+
+section.categoria .productInfo {
+    font-size:35px ;
+    font-weight: 600;
+    line-height: 30px;
+ }
+ section.categoria .productInfo {
+    font-family: 'Grandstander';   
+    font-size:25px ;
+    color: var(--colorSecundario);
+    font-weight: 600;
+     }
+
+section.relatedProducts .productList{
+        display: flex;     
+        flex-wrap: wrap;   
+        justify-content: space-around;
+        align-items: center;
+    }
 article.productCard {
     background-color: #fff;
     border-radius: 10px;
@@ -428,7 +447,7 @@ article.productCard .text  {
     align-items: flex-start;
 }
 
-article.productCard .text h3 {
+article.productCard .text h3.title {
     color:#231f20;
     
 }
@@ -447,4 +466,3 @@ article.productCard .text h6.formaPago {
     color:#231f2048;
     font-size: 16px;
 }
-
