--- a/src/views/pages/details.ejs
+++ b/src/views/pages/details.ejs
@@ -30,9 +30,10 @@
         </div>
 
     <br>          
-   <section class= "relatedProducts">
+<section class= "relatedProducts">
     <h2 class="h2-relatedProductos">También te puede interesar</h2>
-
+<br>
+<div class="productList">
    <article class="productCard">
     <img src="../../../images/tamaiti_product_01.png" alt="">
     <div class="text">
@@ -59,7 +60,8 @@
     <h5 class="descuento">%10 off</h5>
     <h6 class="formaPago"><strong>12 cuotas</strong> sin interés</h6>
     </div>
-</article>
+</article>    
+</div>
 </section>
 
     <footer>
