HEADER agregue menu lateral / HEAD agregue favicon

--- a/src/views/pages/home.ejs
+++ b/src/views/pages/home.ejs
@@ -5,10 +5,12 @@
         <%- include('../partials/header'); %>
     </header>
 
+<div id="main">
+
     <section class="bannerTienda">
         <div class="text">    
             <h2>Ideas para Jugar</h2>
-            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Juegos tradicionales con diseño para potenciar el desarrollo</p>
             <button><a href="">Tienda ONLINE</a></button></div>
         <img  src="images/tamaiti_banner_home.png" alt="">
     </section>
@@ -69,6 +71,8 @@
             </article>
         </div>
     </section>
+    
+</div>
 
 
     <footer>
