--- a/public/css/style.css
+++ b/public/css/style.css
@@ -64,7 +64,7 @@ header nav.menu {
     align-items: center;
     padding: 0 10%;
     background-color:#fff;
-    width: 100%;
+
 }
 
 header nav.menu .top {
@@ -120,6 +120,58 @@ header nav.menu i {
     margin-right:8px ;
     font-size:1.3em;
 }
+
+
+header .sidenav {
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0;
+    left: 0;
+    background-color: #eaf5f4; /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+  }
+  
+  /* The navigation menu links */
+  header .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 20px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+    text-align: left;
+  }
+  
+  /* When you mouse over the navigation links, change their color */
+ header  .sidenav a:hover {
+    color: #4fb6a5;
+  }
+  
+  /* Position and style the close button (top right corner) */
+  header .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+  
+
+  /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+ #main {
+    transition: margin-left .5s;
+  }
+  
+ #menu {
+    transition: margin-left .5s;
+  }
+  
+
+
 
 
 
