Coloque todas las rutas en todos links sitio /Css cards

--- a/src/views/pages/home.ejs
+++ b/src/views/pages/home.ejs
@@ -5,13 +5,13 @@
         <%- include('../partials/header'); %>
     </header>
 
-<div id="main">
 
     <section class="bannerTienda">
         <div class="text">    
             <h2>Ideas para Jugar</h2>
             <p>Juegos tradicionales con diseño para potenciar el desarrollo</p>
-            <button><a href="">Tienda ONLINE</a></button></div>
+            <a href="/products">Tienda ONLINE</a>
+        </div>
         <img  src="images/tamaiti_banner_home.png" alt="">
     </section>
 
@@ -72,7 +72,6 @@
         </div>
     </section>
     
-</div>
 
 
     <footer>
