--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -23,7 +23,7 @@
               </p>
               <p class="change_link">
                   Aún no eres miembro
-                  <a href="registro.html" class="to_register">Regístrate</a>
+                  <a href="register" class="to_register">Regístrate</a>
               </p>
             </form>
           </div>
