--- a/src/views/pages/products.ejs
+++ b/src/views/pages/products.ejs
@@ -5,7 +5,54 @@
         <%- include('../partials/header'); %>
     </header>
 
-<h1>products</h1>
+<h1>Tienda Online</h1>
+
+<section class="oportunidades">
+    <div class="productList">
+        <article class="productCard">
+            <img src="../../../images/tamaiti_product_01.png" alt="producto1">
+            <div class="text">
+                <h3 class="title">Memotest Espacial</h3>
+                <h5 class="edad">Edad 6 a 9 años</h5>
+                <h4 class="precio">$799,-</h4>
+                <h6 class="formaPago"><strong>12 cuotas</strong> sin interés</h6>
+            </div>
+        </article>
+
+    
+        <article class="productCard">
+            <img src="../../../images/tamaiti_product_01.png" alt="producto1">
+            <div class="text">
+                <h3 class="title">Memotest Colores</h3>
+                <h5 class="edad">Edad 1 a 3 años</h5>
+                <h4 class="precio">$740,-</h4>
+                <h6 class="formaPago"><strong>12 cuotas</strong> sin interés</h6>
+            </div>
+        </article>
+        
+        <article class="productCard">
+            <img src="../../../images/tamaiti_product_01.png" alt="producto1">
+            <div class="text">
+                <h3 class="title">Memotest Espacial</h3>
+                <h5 class="edad">Edad 6 a 9 años</h5>
+                <h4 class="precio">$799,-</h4>
+                <h6 class="formaPago"><strong>12 cuotas</strong> sin interés</h6>
+            </div>
+        </article>
+        
+        <article class="productCard">
+            <img src="../../../images/tamaiti_product_01.png" alt="producto1">
+            <div class="text">
+                <h3 class="title">Memotest Dinosaurios</h3>
+                <h5 class="edad">Edad 2 a 9 años</h5>
+                <h4 class="precio">$700,-</h4>
+                <h6 class="formaPago"><strong>12 cuotas</strong> sin interés</h6>
+            </div>
+        </article>
+    </div>
+</section>
+
+
 
     <footer>
         <%- include('../partials/footer'); %>
