--- a/src/views/pages/register.ejs
+++ b/src/views/pages/register.ejs
@@ -30,7 +30,7 @@
               </p>
               <p class="change_link">  
                   Ya eres miembro?
-                  <a href="login.html" class="to_register"> Loguéate </a>
+                  <a href="login" class="to_register"> Loguéate </a>
               </p>
             </form>
         </div>
