--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,6 +56,9 @@ form {
 header {
     width: 100%;
     top:0;
+    -webkit-box-shadow: 0 0 5px 0x rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
 }
 
 header nav.menu {
@@ -133,6 +136,9 @@ header .sidenav {
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 60px; /* Place content 60px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+    -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
   }
   
   /* The navigation menu links */
@@ -158,16 +164,6 @@ header .sidenav {
     right: 25px;
     font-size: 36px;
     margin-left: 50px;
-  }
-  
-
-  /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
- #main {
-    transition: margin-left .5s;
-  }
-  
- #menu {
-    transition: margin-left .5s;
   }
   
 
@@ -301,12 +297,20 @@ article.productCard {
     border-radius: 10px;
     display: flex;
     width: 30%;
-    box-shadow: 0px 0px 6px #88888859;
     padding: 15px;
     min-width: 350px;
     margin-top:15px;
+    box-shadow: 0px 0px 6px #88888859;
+    -webkit-transition:  box-shadow .6s ease-out;
+       box-shadow: .8px .9px 3px #88888859;
 
 }
+
+.productCard:hover{ 
+    box-shadow: 1px 8px 20px  #88888859;
+   -webkit-transition:  box-shadow .6s ease-in;
+ }
+
 article.productCard img {
     width: 45%;
 
