--- a/public/css/style.css
+++ b/public/css/style.css
@@ -170,7 +170,15 @@ header .sidenav {
 
 
 
+/* ================================
+- Estilo paginas gral
+================================*/
+h1.titlePage{
+    padding: 20px 0px 15px 0px;
+    font-size: 25px;
+    font-family: 'Grandstander';
 
+}
 /* ================================
 - seccion HOME BANNER PRINCIPAL
 ================================*/
@@ -292,7 +300,7 @@ section.oportunidades .productList{
     align-items: center;
 }
 
-article.productCard {
+a.productCard {
     background-color: #fff;
     border-radius: 10px;
     display: flex;
@@ -306,16 +314,16 @@ article.productCard {
 
 }
 
-.productCard:hover{ 
+a.productCard:hover{ 
     box-shadow: 1px 8px 20px  #88888859;
    -webkit-transition:  box-shadow .6s ease-in;
  }
 
-article.productCard img {
+a.productCard img {
     width: 45%;
 
 }
-article.productCard .text  {
+a.productCard .text  {
     display:flex;
     width: 55%;
     justify-content: space-around;
@@ -323,22 +331,22 @@ article.productCard .text  {
     align-items: flex-start;
 }
 
-article.productCard .text h3 {
+a.productCard .text h3 {
     color:#231f20;
     
 }
-article.productCard .text h5.edad {
+a.productCard .text h5.edad {
     color:#231f207a;
     text-transform: uppercase;
 }
-article.productCard .text  h4.precio {
+a.productCard .text  h4.precio {
     color:#231f20;
     font-weight: bold;
     font-size: 25px;
     align-self: flex-end ;
 
 }
-article.productCard .text h6.formaPago {
+a.productCard .text h6.formaPago {
     color:#231f2048;
     font-size: 16px;
 }
@@ -440,12 +448,12 @@ header nav.menu img.logo {
 }
     
 
-section.bannerTienda{
+a.bannerTienda{
     flex-direction: column;
 
     }
 
- article.productCard {
+ a.productCard {
         min-width: 90%;
     }    
 
@@ -474,13 +482,13 @@ section.categoria .productInfo {
     font-weight: 600;
      }
 
-section.relatedProducts .productList{
+section.productList{
         display: flex;     
         flex-wrap: wrap;   
         justify-content: space-around;
         align-items: center;
     }
-article.productCard {
+a.productCard {
     background-color: #fff;
     border-radius: 10px;
     display: flex;
@@ -491,11 +499,11 @@ article.productCard {
     margin-top:15px;
 
 }
-article.productCard img {
+a.productCard img {
     width: 45%;
 
 }
-article.productCard .text  {
+a.productCard .text  {
     display:flex;
     width: 55%;
     justify-content: space-around;
@@ -503,22 +511,22 @@ article.productCard .text  {
     align-items: flex-start;
 }
 
-article.productCard .text h3.title {
+a.productCard .text h3.title {
     color:#231f20;
     
 }
-article.productCard .text h5.descuento {
+a.productCard .text h5.descuento {
     color:#231f207a;
     text-transform: uppercase;
 }
-article.productCard .text  h4.precio {
+a.productCard .text  h4.precio {
     color:#231f20;
     font-weight: bold;
     font-size: 25px;
     align-self: flex-end ;
 
 }
-article.productCard .text h6.formaPago {
+a.productCard .text h6.formaPago {
     color:#231f2048;
     font-size: 16px;
 }
