--- a/src/views/pages/home.ejs
+++ b/src/views/pages/home.ejs
@@ -27,50 +27,25 @@
 
     <section class="oportunidades">
         <h2>Oportunidades</br><span>para jugar</span> </h2>
-        <div class="productList">
-
-            <article class="productCard">
-                <img src="../../../images/tamaiti_product_01.png" alt="producto1">
-                <div class="text">
-                    <h3 class="title">Memotest Espacial</h3>
-                    <h5 class="edad">Edad 6 a 9 años</h5>
-                    <h4 class="precio">$799,-</h4>
-                    <h6 class="formaPago"><strong>12 cuotas</strong> sin interés</h6>
-                </div>
-            </article>
-
-        
-            <article class="productCard">
-                <img src="../../../images/tamaiti_product_01.png" alt="producto1">
-                <div class="text">
-                    <h3 class="title">Memotest Colores</h3>
-                    <h5 class="edad">Edad 1 a 3 años</h5>
-                    <h4 class="precio">$740,-</h4>
-                    <h6 class="formaPago"><strong>12 cuotas</strong> sin interés</h6>
-                </div>
-            </article>
-            
-            <article class="productCard">
-                <img src="../../../images/tamaiti_product_01.png" alt="producto1">
-                <div class="text">
-                    <h3 class="title">Memotest Espacial</h3>
-                    <h5 class="edad">Edad 6 a 9 años</h5>
-                    <h4 class="precio">$799,-</h4>
-                    <h6 class="formaPago"><strong>12 cuotas</strong> sin interés</h6>
-                </div>
-            </article>
-            
-            <article class="productCard">
-                <img src="../../../images/tamaiti_product_01.png" alt="producto1">
-                <div class="text">
-                    <h3 class="title">Memotest Dinosaurios</h3>
-                    <h5 class="edad">Edad 2 a 9 años</h5>
-                    <h4 class="precio">$700,-</h4>
-                    <h6 class="formaPago"><strong>12 cuotas</strong> sin interés</h6>
-                </div>
-            </article>
+         
+            <div class="productList">
+                <% for (let i = 0; i < 6; i++) {%> 
+                   
+                    <a href="products/<%= productos[i].id %>" class="productCard">
+                        <img src="../../../images/tamaiti_product_01.png" alt="producto1">
+                        <div class="text">
+                            <h3 class="title"><%= productos[i].name %></h3>
+                            <h5 class="edad"><%= productos[i].age %></h5>
+                            <h4 class="precio">$<%= productos[i].price %></h4>
+                            <!-- <h5 class="descuento">%10 off</h5> -->
+                            <!-- <h6 class="formaPago"><strong>12 cuotas</strong> sin interés</h6> -->
+                        </div>
+                    </a>
+                
+                    <% }%> 
         </div>
     </section>
+  
     
 
 
