--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <ul class="navNosotros">
-    <li><a href="">Sobre Nosotros</a></li>
-    <li><a href="">Tienda Online</a></li>
+    <li><a href="#">Sobre Nosotros</a></li>
+    <li><a href="products">Tienda Online</a></li>
 </ul>
 
 <ul class="navSocialMedia">
