--- a/public/css/style.css
+++ b/public/css/style.css
@@ -383,7 +383,43 @@ footer ul.navNosotros li a {
     font-size:14px;
     font-weight: 600;
 }
+/* ================================
+- Style Forms
+================================*/
 
+.form{
+    background-color: rgb(245, 245, 245);
+    margin: 0px auto;
+    padding: 0 20%;
+}
+
+.form-group{
+ margin-bottom: 20px;
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    height: calc(1.5em + .75rem + 2px);
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+label{
+    color: #3737378a;
+}
+
+.signin button{
+    padding: 10px;
+}
 
  /* ================================
 - Media Querys
@@ -459,6 +495,10 @@ a.bannerTienda{
 
 }
 
+.form{
+    padding: 0 5%;
+}
+
 /* ================================
 - Style Product Details page
 ================================*/
@@ -530,3 +570,4 @@ a.productCard .text h6.formaPago {
     color:#231f2048;
     font-size: 16px;
 }
+
