--- a/src/views/pages/productosCreate.ejs
+++ b/src/views/pages/productosCreate.ejs
@@ -1,37 +1,55 @@
-<%- include('../partials/head'); %>
+<%- include('../partials/head2'); %>
 <body>
 
     <header>
         <%- include('../partials/header'); %>
     </header>
 
+
+
     <section>
         <div id="createProduct" class="form">
             <form  action="" autocomplete="on"  method="POST"> 
-              <h1>Cargar nuevo Producto</h1> 
-              <p> 
-                  <label for="" class="" >Nombre </label>
-                  <input id="productName" name="name" required="required" type="text" placeholder="Nombre del producto" />
-              </p>
-              <p> 
-                  <label for="" class="" > Description</label>
-                  <input id="description" name="description" required="required" type="text" placeholder="Descripción del producto"/> 
-              </p>
-              <p> 
-                  <label for="" class="" >Price </label>
-                  <input id="passwordsignup" name="passwordsignup" required="required" type="password" placeholder="eg. X8df!90EO" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Debe contener al menos un número y una letra minúscula y mayúscula, y al menos 8 o más caracteres"/> 
-              </p>
-              <p> 
-                  <label for="passwordsignup_confirm" class="youpasswd" >Confirma tu password </label>
-                  <input id="passwordsignup_confirm" name="passwordsignup_confirm" required="required" type="password" placeholder="eg. X8df!90EO"/>
-              </p>
-              <p class="signin button"> 
-                  <input type="submit" value="Registro"/> 
-              </p>
-              <p class="change_link">  
-                  Ya eres miembro?
+              <h1 class="titlePage">Cargar nuevo Producto</h1> 
+              <div class="form-group">
+                <label for="" class="" >Nombre del producto </label>
+                  <input id="name" name="name" class="form-control" required="required" type="text" placeholder="Nombre del producto" />
+              </div>
+
+              <div class="form-group">
+                <label for="" class="" > Descripción</label>
+                <input id="description" name="description"  class="form-control" required="required" type="text" placeholder="Descripción del producto"/> 
+              </div>
+
+            <div class="form-group">
+                <label for="" class="" >Carga la imagen </label>
+                <input id="image" name="image" class="form-control" required="required" type="file" placeholder="Imagen de producto" />
+            </div>
+
+
+            <div class="form-group">
+              <label for="" class="" >Precio </label>
+              <input id="price" name="price" class="form-control" required="required" type="number" placeholder="eg. X8df!90EO" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Debe contener al menos un número y una letra minúscula y mayúscula, y al menos 8 o más caracteres"/> 
+            </div>
+            
+            <div class="form-group">
+              <label for="" class="" > Edad sugerida</label>
+              <input id="age" name="age"  class="form-control" required="required" type="text" placeholder="Edad sugerida"/> 
+            </div>
+
+
+            <div class="form-group">
+              <label for="" class="" > Categoria</label>
+              <input id="category" name="category"  class="form-control" required="required" type="text" placeholder="Categoria de producto"/> 
+            </div>
+
+
+              <p class=""> 
+                <button type="submit" class="btn btn-primary">Confirmar</button>
+                <p class="change_link"> Ya eres miembro?  </p>
                   <a href="login" class="to_register"> Loguéate </a>
-              </p>
+
+                </p>
             </form>
         </div>
     </section>
