--- a/src/views/pages/productoBoard.ejs
+++ b/src/views/pages/productoBoard.ejs
@@ -14,9 +14,9 @@
         <h5 class="edad"><%= elProducto.age %></h5>
         <h4 class="precio">$ <%= elProducto.price %></h4>
         <!-- <h6 class="formaPago"><strong>12 cuotas</strong> sin interés</h6> -->
-        <button>
-        <a href="" class="btn">Comprar</a>
-        </button>
+        <a href="" class="btn">Editar</a>
+        <a href="" class="btn">Borrar</a>
+
         </div>
     </div>
     <br>
