--- a/src/views/pages/details.ejs
+++ b/src/views/pages/details.ejs
@@ -8,14 +8,14 @@
     <h1 class="titlePage">Detalle de <%= elProducto.name %> </h1>
     <section class="categoria"><%= elProducto.category %></section>
     <div class="productCard">
-        <img src="../../../images/tamaiti_product_01.png"alt="">
+        <img src="../../../uploads/img_products/<%= elProducto.image %>" alt="NO TA">
         <div class="text">
         <h3 class="title"><%= elProducto.name %></h3>
         <h5 class="edad"><%= elProducto.age %></h5>
         <h4 class="precio">$ <%= elProducto.price %></h4>
         <!-- <h6 class="formaPago"><strong>12 cuotas</strong> sin interés</h6> -->
         <button>
-        <a href="" class="btn">Comprar</a>
+        <a href=""  class="btn">Comprar</a>
         </button>
         </div>
     </div>
@@ -29,26 +29,7 @@
 
     <br>          
 
-     <section class="oportunidades">
-        <h2><span>También puede interesarte</span> </h2>
-         
-            <div class="productList">
-                <% for (let i = 0; i < 6; i++) {%> 
-                   
-                    <a href="<%= productos[i].id %>" class="productCard">
-                        <img src="../../../images/tamaiti_product_01.png" alt="producto1">
-                        <div class="text">
-                            <h3 class="title"><%= productos[i].name %></h3>
-                            <h5 class="edad"><%= productos[i].age %></h5>
-                            <h4 class="precio">$<%= productos[i].price %></h4>
-                            <!-- <h5 class="descuento">%10 off</h5> -->
-                            <!-- <h6 class="formaPago"><strong>12 cuotas</strong> sin interés</h6> -->
-                        </div>
-                    </a>
-                
-                    <% }%> 
-        </div>
-    </section>
+    
   
 
     <footer>
