--- a/src/views/pages/home.ejs
+++ b/src/views/pages/home.ejs
@@ -28,24 +28,24 @@
     <section class="oportunidades">
         <h2>Oportunidades</br><span>para jugar</span> </h2>
          
+       
             <div class="productList">
                 <% for (let i = 0; i < 6; i++) {%> 
-                   
-                    <a href="products/<%= productos[i].id %>" class="productCard">
-                        <img src="../../../images/tamaiti_product_01.png" alt="producto1">
+                    <a   href="products/<%= productos[i].id %>" class="productCard">
+                        <img src="../../../uploads/img_products/<%= productos[i].image %>" alt="producto1">
                         <div class="text">
                             <h3 class="title"><%= productos[i].name %></h3>
                             <h5 class="edad"><%= productos[i].age %></h5>
+                            <h5 class="descuento"><%= productos[i].discount %></h5> 
                             <h4 class="precio">$<%= productos[i].price %></h4>
-                            <!-- <h5 class="descuento">%10 off</h5> -->
-                            <!-- <h6 class="formaPago"><strong>12 cuotas</strong> sin interés</h6> -->
+                            <h6 class="formaPago"><strong>12 cuotas</strong> sin interés</h6>
                         </div>
                     </a>
                 
                     <% }%> 
-        </div>
-    </section>
-  
+            
+            </div>
+        </section>
     
 
 
