--- a/src/views/pages/products.ejs
+++ b/src/views/pages/products.ejs
@@ -12,14 +12,14 @@
 
     <div class="productList">
         <% for (let i = 0; i < productos.length; i++) {%> 
-            <a   href="products/<%= productos[i].id %>" class="productCard">
-                <img src="../../../images/tamaiti_product_01.png" alt="producto1">
+            <a   href="../products/<%= productos[i].id %>" class="productCard">
+                <img src="../../../uploads/img_products/<%= productos[i].image %>" alt="producto1">
                 <div class="text">
                     <h3 class="title"><%= productos[i].name %></h3>
                     <h5 class="edad"><%= productos[i].age %></h5>
+                    <h5 class="descuento"><%= productos[i].discount %></h5> 
                     <h4 class="precio">$<%= productos[i].price %></h4>
-                    <!-- <h5 class="descuento">%10 off</h5> -->
-                    <!-- <h6 class="formaPago"><strong>12 cuotas</strong> sin interés</h6> -->
+                    <h6 class="formaPago"><strong>12 cuotas</strong> sin interés</h6>
                 </div>
             </a>
         
