--- a/src/views/pages/productEdit.ejs
+++ b/src/views/pages/productEdit.ejs
@@ -74,7 +74,7 @@
   
             <form action="edit?_method=DELETE" method="POST" >
               <div class="form-group">
-              <button type="submit" class="btn btn-primary">Eliminar</button>
+              <button type="submit" class="btn">Eliminar</button>
               </div>
             </form>
 
