lucia creando controller y ruta del carrito

--- a/src/views/pages/cart.ejs
+++ b/src/views/pages/cart.ejs
@@ -8,7 +8,7 @@
     <div>
         <h1>Product Cart</h1>
     </div>
-    <div class="carrito">
+    <div class="miCarrito">
         <section class="miCarrito">
             <article>
                 <img src="../../../uploads/img_products/<%= productos[i].image %>" alt="imagenProducto"> 
