--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -4,22 +4,35 @@
     <header>
         <%- include('../partials/header'); %>
     </header>
-
+    <% if (typeof errors != 'undefined') { %>
+        <p style="color: red"> Error</p>
+        <ul>
+            <% for (let i = 0; i < errors.length; i ++) { %>
+                <li>
+                    <%=errors[i].msg%>
+                </li>
+            <% } %>
+        </ul>
+    <% } %>    
     <section>
         <div id="login" class="form">
-            <form  action="mysuperscript.php" autocomplete="on"> 
+            <form  action="mysuperscript.php" autocomplete="on" method="POST"> 
               <h1>Login</h1> 
               <p> 
                   <label for="username" class="uname" > Nombre de usuario: </label>
                   <input id="username" name="username" required="required" type="text" placeholder="Tu nombre de usuario"/>
               </p>
+              <p>
+                <label for="email" class="yourmail" > Tu email</label>
+                <input id="emailsignup" name="email" required="required" type="email" placeholder="ejemplo@mail.com"/> 
+              </p>
               <p> 
                   <label for="password" class="youpasswd"> Contraseña:</label>
                   <input id="password" name="password" required="required" type="password" placeholder="Tu password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Debe contener al menos un número y una letra minúscula y mayúscula, y al menos 8 o más caracteres"/> 
               </p>
-          
+              
               <p class="login button"> 
-                  <input type="submit" value="Login" /> 
+                  <input type="submit" value="Login"/> 
               </p>
               <p class="change_link">
                   Aún no eres miembro
